# nest-octopus

./: .gitignore  README.md  example.py  mkosi.build.chroot  mkosi.conf  nest-octopus.conf.example  pyproject.toml
.github/workflows/: ci.yml
.obs/: workflows.yml
mkosi.extra/usr/lib/systemd/system/: nest-octopus-fail.service  nest-octopus.service
nest_octopus/: __init__.py  heating_optimizer.py  nest_thermostat.py  ntfy.py  octopus.py  tg_supplymaster.py
tests/: __init__.py  test_heating_optimizer.py  test_nest_thermostat.py  test_ntfy.py  test_octopus.py  test_tg_integration.py  test_tg_supplymaster.py
tests/fixtures/: README.md
tests/fixtures/heating/: typical_day_prices.json  weekly_prices_sample.json
tests/fixtures/nest/invalid/: error_failed_precondition.json  error_invalid_argument.json  error_not_found.json  error_permission_denied.json  invalid_mode.json  missing_device_name.json  missing_traits.json  oauth_auth_code_missing_refresh_token.json  oauth_missing_access_token.json
tests/fixtures/nest/valid/: device_cool_mode.json  device_eco_mode.json  device_empty_customname.json  device_heat_mode.json  device_heatcool_mode.json  device_limited_modes.json  device_offline.json  device_precise_temperatures.json  device_real_example.json  list_devices.json  oauth_auth_code_exchange_full.json  oauth_auth_code_exchange_minimal.json  oauth_token_response_full.json  oauth_token_response_minimal.json  oauth_token_response_short_expiry.json
tests/fixtures/octopus/invalid/: error_response.json  malformed_json.txt  missing_results.json  missing_valid_from.json  missing_value_exc_vat.json  wrong_type_count.json  wrong_type_price.json
tests/fixtures/octopus/valid/: account_multiple_meters.json  account_openended_tariff.json  account_response.json  high_low_prices.json  large_response_46_results.json  negative_prices.json  paginated_response.json  single_result.json  standard_response.json
