[project]
name = "nest_octopus"
version = "0.1.0"
license = "MPL-2.0"
license-files = [
    "LICENSE",
]
dependencies = [
    "requests >= 2.31.0",
]

[project.optional-dependencies]
test = [
    "pytest >= 7.4.0",
    "pytest-cov >= 4.1.0",
    "pytest-mock >= 3.12.0",
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project.scripts]
nest-octopus = "nest_octopus.heating_optimizer:main"

[tool.setuptools]
packages = ["nest_octopus"]

[tool.mypy]
python_version = 3.13
# belonging to --strict
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_untyped_decorators = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_return_any = true
no_implicit_reexport = true
# extra options not in --strict
pretty = true
show_error_codes = true
show_column_numbers = true
warn_unreachable = true
strict_equality = true
scripts_are_modules = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["nest_octopus"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
